# excel-comparator

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lib/: lib.rs
src/lib/domain/: mod.rs  models.rs  ports.rs  service.rs
src/lib/inbound/: excel_reader.rs  mod.rs
src/lib/outbound/: excel_writer.rs  mod.rs
src/lib/outbound/mistral_client/: http_structure.rs  mistral_api.rs  mod.rs
test/: integration_tests.rs  test.xlsx
