[package]
name = "excel_comparator"
version = "0.1.0"
edition = "2021"

[lib]
name = "excel_comparator"
path = "src/lib/lib.rs" 

[dependencies]
anyhow = "1.0.95"
calamine = "0.26.1"
thiserror = "2.0.11"
rust_xlsxwriter = "0.83.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
tempfile = "3.16.0"


